k8s_app_deploy/data/cm.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: podtest1
  name: podtest1
spec:
  volumes:
  - name: vol1
    configMap:
     name: game-config
  - name: vol2
    configMap:
     name: game-config1
  containers:
  - command:
    - sleep
    - "10000"
    image: alpine
    name: podtest1
    volumeMounts:
    - name: vol1
      mountPath: /mnt/newconfig/
    - name: vol2
      mountPath: /opt/game.properties
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
