k8s_app_deploy/data/multi.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: ashudemoapp
  name: ashudemoapp
spec:
  volumes: # creating volume 
  - name: ashudatavol1 # name of volume 
    emptyDir: {} # temp vol which take space from Minion node 
  containers:
  - image: nginx 
    name: monitorc1 
    volumeMounts:
    - name: ashudatavol1
      mountPath: /usr/share/nginx/html/
      readOnly: true 
  - image: alpine
    name: datagenc1
    volumeMounts: # mounting volume 
    - name: ashudatavol1
      mountPath: /mnt/data/
    command: ["sh","-c","while true;do echo hello Mobi >>/mnt/data/logs.txt ; sleep 10;done"]
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
