k8s_app_deploy/data/mobi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: ashumobi
  name: ashumobi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ashumobi
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ashumobi
    spec:
      containers:
      - image: dockerashu/mobiwebapp:finalv1
        name: mobiwebapp
        imagePullPolicy: Always 
        ports:
        - containerPort: 80
        resources: {}
status: {}
---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: ashumobi
  name: lb111
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ashumobi
  type: NodePort
status:
  loadBalancer: {}
