k8s_app_deploy/data/ashu-ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ashu-ingress # name of rule 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx # className
  rules:
  - host: www.ashu.com # hostname 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homelb
            port:
              number: 80
      - path: /info
        pathType: Prefix
        backend:
          service:
            name: infolb
            port:
              number: 80
